--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b81a1">  <td>21/10/22 23:21:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setBrowserType(java.lang.String)[pri:0, instance:tests.LoginTestWithDataDriven@6e9175d8]">&gt;&gt;setBrowserType</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1393828949</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>21/10/22 23:22:00</td>   <td>5538</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestWithDataDriven.loadLoginData()[pri:0, instance:tests.LoginTestWithDataDriven@6e9175d8]">&gt;&gt;loadLoginData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1393828949</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>21/10/22 23:22:02</td>   <td>6798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestWithDataDriven.login()[pri:0, instance:tests.LoginTestWithDataDriven@6e9175d8]">login</td> 
-  <td>main@1393828949</td>   <td></td> </tr>
-<tr bgcolor="ce7ed4">  <td>21/10/22 23:22:13</td>   <td>17906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTestWithDataDriven.tackeScreenShot()[pri:0, instance:tests.LoginTestWithDataDriven@6e9175d8]">&lt;&lt;tackeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@1393828949</td>   <td></td> </tr>
-<tr bgcolor="9b81a1">  <td>21/10/22 23:22:13</td>   <td>18226</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:tests.LoginTestWithDataDriven@6e9175d8]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1393828949</td>   <td></td> </tr>
+<tr bgcolor="9b81a1">  <td>21/10/23 00:14:34</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setBrowserType(java.lang.String)[pri:0, instance:tests.KeywordDriven@6d4d66d2]">&gt;&gt;setBrowserType</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1182908789</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>21/10/23 00:14:40</td>   <td>5776</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;KeywordDriven.loadLoginData()[pri:0, instance:tests.KeywordDriven@6d4d66d2]">&gt;&gt;loadLoginData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1182908789</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>21/10/23 00:14:41</td>   <td>6829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KeywordDriven.login()[pri:0, instance:tests.KeywordDriven@6d4d66d2]">login</td> 
+  <td>main@1182908789</td>   <td></td> </tr>
+<tr bgcolor="9b81a1">  <td>21/10/23 00:14:50</td>   <td>16468</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:tests.KeywordDriven@6d4d66d2]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1182908789</td>   <td></td> </tr>
 </table>
